# mini-flight-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
docs/: README.md  RGB_LED_README.md
main/: CMakeLists.txt  Kconfig.projbuild  config.h  hello_world_main.c  idf_component.yml  rgb_led.c  rgb_led.h  rgb_led_demo.h  wifi_manager.c  wifi_manager.h
